internet_gw.tf
resource "aws_internet_gateway" "gw" {
  vpc_id = "${aws_vpc.main.id}"
  tags {
    Name = "TERAFORM VPC IGW"
  }
}
